--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "To do list using NodeJs + Express",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon"
   },
   "repository": {
     "type": "git",
